--- a/Frontend/src/Components/ChatBox/ChatBox.css
+++ b/Frontend/src/Components/ChatBox/ChatBox.css
@@ -128,3 +128,28 @@
     font-size: 12px;
     margin: 0;
 }
+
+.chat-welcome{
+    width:100%;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    color: #adadad;
+}
+
+.chat-welcome img{
+    width: 60%;
+}
+
+.chat-welcome p{
+    font-size: 20px;
+    font-weight: 500;
+    color: #383838;
+}
+
+.msg-img{
+    width:100px;
+    height:100px;
+}
