--- a/Frontend/src/Components/LeftSideBar/LeftSideBar.css
+++ b/Frontend/src/Components/LeftSideBar/LeftSideBar.css
@@ -126,3 +126,11 @@
     display: block;
 }
 
+.friends.border img{
+    border: 3px solid #07fff3;
+}
+
+.friends.border div span{
+    color: #07fff3;
+}
+
